...
                ),
                HelperFunc.verticalSizedBox(context, height: 0.1),

                Align(
                  alignment: Alignment.centerRight,
                  child: ElevatedButton(
                    key: ValueKey('goToGeneratePasswordScreenBtn'),
                    onPressed: () {
                      HelperFunc.pushScreen(context, GeneratePasswordScreen());
                    },
                    child: const Text('Generate New password'),
                  ),
                ),
...
                Align(
                  alignment: Alignment.bottomCenter,
                  child: SizedBox(
                    width: double.infinity,
                    height: MediaQuery.of(context).size.height * 0.06,
                    child: ElevatedButton(
                      key: ValueKey('addPassBtn'),
                      style: ElevatedButton.styleFrom(),
                      onPressed: () {
                        if (formKey.currentState!.validate()) {
                          print('Form is valid');
                          PasswordModel password = PasswordModel(
                            password: _passwordController.text,
...
