...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        backgroundColor: Colors.transparent,
        leading: IconButton(
        key: ValueKey('goBackFromGeneratePassBtn'),
          icon: const Icon(Icons.arrow_back),
          onPressed: () {
            Navigator.pop(context); // Go back to the previous screen
          },
        ),
      ),
...
                },
              ),
            ),
            const Spacer(),
            Center(
              child: ElevatedButton(
                key: ValueKey('generatePasswordBtn'),
                onPressed: () {
                  context.read<GeneratePasswordBloc>().add(GeneratePassword());
                },
                child: Text(
                  'GENERATE',
                  style: Theme.of(context).textTheme.bodyMedium,
...
